# Sky_Pro_HW_6

./: README.md  main.py  pyproject.toml
src/: processing.py
